# agent_playground

./: .gitignore  CLAUDE.md  LICENSE  README.md  db_schema.md  mvp_plan.md  project_structure.md  pyproject.toml  requirements.md
common/: symbols.py
common/tests/: test_symbols.py
data/: __init__.py  api.py  config.py  sync.py
data/baostock/: cache.db
data/providers/: __init__.py  baostock.py  baostock_sync.py
invest_assistant/: README.md  pyproject.toml  requirements.txt
invest_assistant/src/invest_assistant/: config.py  main.py
invest_assistant/src/invest_assistant/api/: __init__.py  monitor.py  stocks.py  sync.py
invest_assistant/src/invest_assistant/core/: __init__.py
invest_assistant/src/invest_assistant/core/monitor/: __init__.py  engine.py
invest_assistant/src/invest_assistant/core/notification/: __init__.py  sender.py
invest_assistant/src/invest_assistant/models/: __init__.py  api_models.py  schemas.py
invest_assistant/src/invest_assistant/notification/: __init__.py  channel.py  formatter.py
invest_assistant/src/invest_assistant/persistence/: __init__.py  models.py
invest_assistant/src/invest_assistant/providers/: __init__.py  baostock.py  provider.py  sync.py
invest_assistant/src/invest_assistant/services/: __init__.py  screener.py
invest_assistant/src/invest_assistant/strategies/: __init__.py  base.py  factor_rule.py  registry.py
invest_assistant/tests/: __init__.py  test_monitor.py
ops/: .gitignore  README.md  pyproject.toml
ops/src/ops/: __init__.py  config.py  main.py
ops/src/ops/api/: stocks.py  sync.py
ops/src/ops/core/: __init__.py
ops/src/ops/core/monitor/: __init__.py
ops/src/ops/notification/: email.py  telegram.py
ops/src/ops/persistence/: db.py  repo.py
ops/tests/: test_monitor.py  test_persistence.py
qlib_research/: validate.py
research/: README.md  pipeline.py
(+3 files in other folders)
